--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "symfony/css-selector": "^2.3"
+        "symfony/css-selector": "^2.3",
+        "guzzlehttp/psr7": "^1.0"
     },
     "require-dev": {
         "spiderling-php/phpunit-matches-selector": "^0.2"
